...
  AppLocalizationsTr([String locale = 'tr']) : super(locale);

  @override
  String get appName => 'Otelcim';

  @override
  String get emailLabel => 'E-posta';

  @override
  String get emailHint => 'ornek@eposta.com';

  @override
  String get emailValidation => 'Geçerli bir e-posta girin';

  @override
  String get passwordLabel => 'Şifre';

  @override
  String get passwordValidation =>
      'Şifre en az 8 karakter ve en az 1 rakam içermelidir';

  @override
...

  @override
  String get brandDescription =>
      'Otel ve turizm sektöründe hayalinizdeki işi veya personeli hızlıca bulun.';

  @override
  String get loginButton => 'Giriş Yap';

  @override
  String get registerButton => 'Kayıt Ol';

  @override
  String get registerTitle => 'Kayıt Ol';
...
  String get navCreateListing => 'İlan Ver';

  @override
  String get navMessages => 'Mesajlar';

  @override
  String get navProfile => 'Hesabım';

  @override
  String get profileTitle => 'Hesabım';

  @override
  String get editProfile => 'Profili Düzenle';
...
